opam-version: "2.0"
name: "scheme-datum"
version: "~dev"
synopsis: ""
maintainer: "OOHASHI Daichi <dico.leque.comicron@gmail.com>"
authors: "OOHASHI Daichi <dico.leque.comicron@gmail.com>"
license: "MIT"
homepage: "http://github.com/leque/scheme-datum.ml"
bug-reports: "http://github.com/leque/scheme-datum.ml/issues"
depends: [
  "dune"
  "base"
  "ppx_deriving"
  "sedlex" {>= "2.0" & < "2.1"}
]
build: [
  ["./configure" "--prefix=%{prefix}%"]
  [make]
]
install: [make "install"]
dev-repo: "git+https://leque/scheme-datum.ml"
