(rule
 (targets parser.output)
 (deps
   "test.scm"
   "list.scm"
 )
 (action
  (with-stdout-to parser.output (run ./test.exe %{deps}))))

(rule
 (alias runtest)
 (action (diff parser.expected parser.output)))

(executable
 (name test)
 (libraries scheme-datum sedlex base stdio)
 (preprocess (pps ppx_deriving.show)))
